HelloUltraviolet/Fixtures/RejectedSource/Comptime/RuntimeCallsComptimeProcedure/Expected.uv
//! Expected diagnostic metadata for the RuntimeCallsComptimeProcedure rejected-source specimen.

expectedDiagnostic("E-CTE-0034", "requirement.22.CompileTimeProcedureContextRestriction")
